--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ h2 {
    max-width: 1300px;
    margin: 0 auto;
    padding: 40px 20px 20px 20px;
+   position: relative;
 }
 
 /* .input-data,
@@ -140,8 +141,35 @@ h2 {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
-   /* -webkit-box-shadow: 2px 2px 6px 1px rgba(71, 20, 100, 0.7);
-   box-shadow: 2px 2px 6px 1px rgba(71, 20, 100, 0.7); */
+}
+
+.up-btn-body {
+   position: fixed;
+   right: 24px;
+   bottom: 12px;
+   background-color: #4f0335;
+   width: 57px;
+   height: 57px;
+   border-radius: 8px;
+   display: none;
+   justify-content: center;
+   align-items: center;
+}
+.up-btn-body.show {
+   display: flex;
+}
+.up-btn-body:hover,
+.up-btn-body:active {
+   background-color: #6a2447;
+}
+
+.up-btn-body a {
+   display: inline-block;
+   text-decoration: none;
+   font-size: 50px;
+
+   padding: 10px 10px 15px 10px;
+   color: #d2c0b6;
 }
 
 .form-first-row {
@@ -184,12 +212,53 @@ h2 {
    min-height: 200px;
    padding: 10px;
    box-sizing: border-box;
+   position: relative;
 }
 
 .display-result__item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
+}
+.item-logo {
+   width: 140px;
+   height: 50px;
+   outline: 4px solid #6a2447;
+   color: #6a2447;
+   background-color: rgb(20, 19, 19, 0.8);
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   transform: translate(-50%, -50%);
+   display: none;
+   justify-content: center;
+   align-items: center;
+   cursor: pointer;
+   z-index: 1;
+}
+
+.display-result__item:hover .item-logo {
+   display: flex;
+}
+.item-logo p {
+   padding: 0;
+   margin: 0;
+   font-size: 20px;
+   font-weight: 700;
+   text-transform: uppercase;
+}
+.item-popup {
+   visibility: hidden;
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 500px;
+   height: 500px;
+   background-color: rgb(19, 18, 18, 0.8);
+   z-index: 2;
+}
+.item-popup.showpop {
+   visibility: visible;
 }
 
 .load-more {
@@ -318,5 +387,13 @@ select option {
 
    .second-display {
       padding: 12px;
+   }
+
+   .empty-result {
+      display: block;
+   }
+
+   .item-logo {
+      display: flex;
    }
 } ;
