--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ h2 {
 
 .up-btn-body {
    position: fixed;
+
    right: 24px;
    bottom: 12px;
    background-color: #4f0335;
@@ -215,7 +216,7 @@ h2 {
    position: relative;
 }
 
-.display-result__item img {
+.display-result__item > img {
    width: 100%;
    height: 100%;
    object-fit: cover;
@@ -223,8 +224,8 @@ h2 {
 .item-logo {
    width: 140px;
    height: 50px;
-   outline: 4px solid #6a2447;
-   color: #6a2447;
+   outline: 2px solid #d2c0b6;
+   color: #d2c0b6;
    background-color: rgb(20, 19, 19, 0.8);
    position: absolute;
    left: 50%;
@@ -243,22 +244,71 @@ h2 {
 .item-logo p {
    padding: 0;
    margin: 0;
-   font-size: 20px;
+   font-size: 18px;
    font-weight: 700;
    text-transform: uppercase;
 }
 .item-popup {
    visibility: hidden;
-   position: absolute;
+   position: fixed;
    top: 0;
    left: 0;
-   width: 500px;
-   height: 500px;
-   background-color: rgb(19, 18, 18, 0.8);
+   width: 100%;
+   height: 100vh;
+   background-color: rgb(19, 18, 18, 0.9);
    z-index: 2;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   align-items: center;
 }
+.close-pop {
+   position: fixed;
+   width: 50px;
+   height: 50px;
+   top: 14px;
+   right: 14px;
+   z-index: 3;
+   margin: 0;
+   padding: 0;
+}
+.close-pop div {
+   display: block;
+   background-color: #fff;
+   width: 40px;
+   height: 4px;
+   margin: 0 !important;
+   padding: 0 !important;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+}
+.close-pop:hover div {
+   background-color: #d2c0b6;
+}
+.close-pop div:first-child {
+   transform: translate(-50%, -50%) rotate(45deg);
+}
+.close-pop div:last-child {
+   transform: translate(-50%, -50%) rotate(-45deg);
+}
+
 .item-popup.showpop {
    visibility: visible;
+}
+.item-popup-image {
+   padding: 20px 0px 0px 0px;
+   height: 80%;
+
+   /* margin: 0 auto; */
+}
+.item-popup-image img {
+   height: 100%;
+   /* width: 100%; */
+   object-fit: scale-down;
+}
+.scroll-lock {
+   overflow: hidden;
 }
 
 .load-more {
@@ -395,5 +445,15 @@ select option {
 
    .item-logo {
       display: flex;
+   }
+
+   .item-popup-image {
+      padding: 20px 0px 0px 0px;
+      width: 98%;
+   }
+   .item-popup-image img {
+      width: 100%;
+      max-width: 100%;
+      object-fit: contain;
    }
 } ;
